@@ -1,3 +1,6 @@
+Mon Jan 26 10:36:35 EST 2004	JK Lowden <jklowden@schemamania.org>
+	* src/tds/write.c handle large UTF-8 inputs to tds_put_string()
+	
 Mon Jan 26 14:39:51 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/unittests/utf8_1.c: improved to catch EINVAL problem
 
